Admin product edit delete developed

--- a/app/src/main/res/layout/activity_listings.xml
+++ b/app/src/main/res/layout/activity_listings.xml
@@ -16,361 +16,21 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-        <Button
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:backgroundTint="@color/button_color"
-            android:text="Update"
-            android:layout_gravity="center"
-            android:layout_marginLeft="20dp"
-            android:textColor="@color/black" />
-
-        <Button
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:backgroundTint="@color/button_color"
-            android:text="Delete"
-            android:layout_gravity="center"
-            android:layout_marginLeft="90dp"
-            android:textColor="@color/black" />
 
             <ImageButton
                 android:id="@+id/addListingsBtn"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
-                android:layout_marginLeft="20dp"
+                android:layout_marginLeft="310dp"
+                android:backgroundTint="@color/button_color"
                 android:src="@drawable/add_listings" />
         </LinearLayout>
 
-        <ScrollView
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/listing_recycler_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"/>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="top"
-                android:orientation="vertical">
-
-                <GridLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp"
-                    android:alignmentMode="alignMargins"
-                    android:columnCount="1"
-                    android:rowCount="6">
-
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_rowWeight="1"
-                        android:layout_columnWeight="1"
-                        android:layout_marginLeft="12dp"
-                        android:layout_marginRight="12dp"
-                        android:layout_marginTop="12dp"
-                        android:layout_marginBottom="12dp"
-                        app:cardCornerRadius="12dp"
-                        app:cardElevation="6dp">
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:gravity="center"
-                            android:orientation="vertical"
-                            android:padding="6dp">
-
-                            <ImageView
-                                android:layout_width="80dp"
-                                android:layout_height="80dp"
-                                android:layout_gravity="left"
-                                android:src="@drawable/crown_lk"/>
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginTop="-70dp"
-                                android:layout_marginLeft="20dp"
-                                android:text="Coconut Shell bowl finished"
-                                android:textColor="#6f6f6f"
-                                android:textSize="18dp"/>
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginTop="20dp"
-                                android:layout_marginRight="40dp"
-                                android:text="In stock : 10"
-                                android:textColor="#6f6f6f"
-                                android:textSize="18dp"/>
-
-                            <CheckBox
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginLeft="130dp"
-                                android:layout_marginBottom="-80dp"
-                                android:layout_marginTop="-30dp"/>
-                        </LinearLayout>
-
-                    </androidx.cardview.widget.CardView>
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_rowWeight="1"
-                        android:layout_columnWeight="1"
-                        android:layout_marginLeft="12dp"
-                        android:layout_marginRight="12dp"
-                        android:layout_marginTop="12dp"
-                        android:layout_marginBottom="12dp"
-                        app:cardCornerRadius="12dp"
-                        app:cardElevation="6dp">
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:gravity="center"
-                            android:orientation="vertical"
-                            android:padding="6dp">
-
-                            <ImageView
-                                android:layout_width="80dp"
-                                android:layout_height="80dp"
-                                android:layout_gravity="left"
-                                android:src="@drawable/crown_lk"/>
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginTop="-70dp"
-                                android:layout_marginLeft="20dp"
-                                android:text="Coconut Shell bowl finished"
-                                android:textColor="#6f6f6f"
-                                android:textSize="18dp"/>
-                            <TextView
-                                android:id="@+id/stock_count"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginTop="20dp"
-                                android:layout_marginRight="40dp"
-                                android:text="In stock : 10"
-                                android:textColor="#6f6f6f"
-                                android:textSize="18dp"/>
-
-                            <CheckBox
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginLeft="130dp"
-                                android:layout_marginBottom="-80dp"
-                                android:layout_marginTop="-30dp"/>
-                        </LinearLayout>
-
-                    </androidx.cardview.widget.CardView>
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_rowWeight="1"
-                        android:layout_columnWeight="1"
-                        android:layout_marginLeft="12dp"
-                        android:layout_marginRight="12dp"
-                        android:layout_marginTop="12dp"
-                        android:layout_marginBottom="12dp"
-                        app:cardCornerRadius="12dp"
-                        app:cardElevation="6dp">
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:gravity="center"
-                            android:orientation="vertical"
-                            android:padding="6dp">
-
-                            <ImageView
-                                android:layout_width="80dp"
-                                android:layout_height="80dp"
-                                android:layout_gravity="left"
-                                android:src="@drawable/crown_lk"/>
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginTop="-70dp"
-                                android:layout_marginLeft="20dp"
-                                android:text="Coconut Shell bowl finished"
-                                android:textColor="#6f6f6f"
-                                android:textSize="18dp"/>
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginTop="20dp"
-                                android:layout_marginRight="40dp"
-                                android:text="In stock : 10"
-                                android:textColor="#6f6f6f"
-                                android:textSize="18dp"/>
-
-                            <CheckBox
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginLeft="130dp"
-                                android:layout_marginBottom="-80dp"
-                                android:layout_marginTop="-30dp"/>
-                        </LinearLayout>
-
-                    </androidx.cardview.widget.CardView>
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_rowWeight="1"
-                        android:layout_columnWeight="1"
-                        android:layout_marginLeft="12dp"
-                        android:layout_marginRight="12dp"
-                        android:layout_marginTop="12dp"
-                        android:layout_marginBottom="12dp"
-                        app:cardCornerRadius="12dp"
-                        app:cardElevation="6dp">
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:gravity="center"
-                            android:orientation="vertical"
-                            android:padding="6dp">
-
-                            <ImageView
-                                android:layout_width="80dp"
-                                android:layout_height="80dp"
-                                android:layout_gravity="left"
-                                android:src="@drawable/crown_lk"/>
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginTop="-70dp"
-                                android:layout_marginLeft="20dp"
-                                android:text="Coconut Shell bowl finished"
-                                android:textColor="#6f6f6f"
-                                android:textSize="18dp"/>
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginTop="20dp"
-                                android:layout_marginRight="40dp"
-                                android:text="In stock : 10"
-                                android:textColor="#6f6f6f"
-                                android:textSize="18dp"/>
-
-                            <CheckBox
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginLeft="130dp"
-                                android:layout_marginBottom="-80dp"
-                                android:layout_marginTop="-30dp"/>
-                        </LinearLayout>
-
-                    </androidx.cardview.widget.CardView>
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_rowWeight="1"
-                        android:layout_columnWeight="1"
-                        android:layout_marginLeft="12dp"
-                        android:layout_marginRight="12dp"
-                        android:layout_marginTop="12dp"
-                        android:layout_marginBottom="12dp"
-                        app:cardCornerRadius="12dp"
-                        app:cardElevation="6dp">
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:gravity="center"
-                            android:orientation="vertical"
-                            android:padding="6dp">
-
-                            <ImageView
-                                android:layout_width="80dp"
-                                android:layout_height="80dp"
-                                android:layout_gravity="left"
-                                android:src="@drawable/crown_lk"/>
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginTop="-70dp"
-                                android:layout_marginLeft="20dp"
-                                android:text="Coconut Shell bowl finished"
-                                android:textColor="#6f6f6f"
-                                android:textSize="18dp"/>
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginTop="20dp"
-                                android:layout_marginRight="40dp"
-                                android:text="In stock : 10"
-                                android:textColor="#6f6f6f"
-                                android:textSize="18dp"/>
-
-                            <CheckBox
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginLeft="130dp"
-                                android:layout_marginBottom="-80dp"
-                                android:layout_marginTop="-30dp"/>
-                        </LinearLayout>
-
-                    </androidx.cardview.widget.CardView>
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_rowWeight="1"
-                        android:layout_columnWeight="1"
-                        android:layout_marginLeft="12dp"
-                        android:layout_marginRight="12dp"
-                        android:layout_marginTop="12dp"
-                        android:layout_marginBottom="12dp"
-                        app:cardCornerRadius="12dp"
-                        app:cardElevation="6dp">
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:gravity="center"
-                            android:orientation="vertical"
-                            android:padding="6dp">
-
-                            <ImageView
-                                android:layout_width="80dp"
-                                android:layout_height="80dp"
-                                android:layout_gravity="left"
-                                android:src="@drawable/crown_lk"/>
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginTop="-70dp"
-                                android:layout_marginLeft="20dp"
-                                android:text="Coconut Shell bowl finished"
-                                android:textColor="#6f6f6f"
-                                android:textSize="18dp"/>
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginTop="20dp"
-                                android:layout_marginRight="40dp"
-                                android:text="In stock : 10"
-                                android:textColor="#6f6f6f"
-                                android:textSize="18dp"/>
-
-                            <CheckBox
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginLeft="130dp"
-                                android:layout_marginBottom="-80dp"
-                                android:layout_marginTop="-30dp"/>
-                        </LinearLayout>
-
-                    </androidx.cardview.widget.CardView>
-
-
-                </GridLayout>
-
-
-
-            </LinearLayout>
-
-        </ScrollView>
 
 
     </LinearLayout>
