--- a/app/src/main/res/layout/activity_add_listing.xml
+++ b/app/src/main/res/layout/activity_add_listing.xml
@@ -38,14 +38,37 @@
 
         </LinearLayout>
     </androidx.appcompat.widget.Toolbar>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_gravity="center">
 
-    <ImageButton
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:src="@drawable/add_listings"
-        android:layout_gravity="center"
-        android:background="@drawable/image_icon"
-        android:layout_marginTop="10dp"/>
+
+        <ImageView
+            android:id="@+id/choose_image"
+            android:layout_width="250dp"
+            android:layout_height="250dp"
+            android:layout_gravity="center"
+            android:layout_marginLeft="80dp"
+            android:src="@drawable/add_image" />
+
+        <ImageButton
+            android:id="@+id/remove_images"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_baseline_cancel_24"
+            android:backgroundTint="@color/white"
+            android:layout_marginTop="20dp"/>
+
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/image_count_show"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:layout_gravity="center"/>
     <EditText
         android:id="@+id/itemTitle"
         android:layout_marginTop="40dp"
@@ -56,31 +79,26 @@
         android:hint="Enter Title"
         android:inputType="textPersonName" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="269dp"
         android:layout_height="wrap_content"
+        android:layout_margin="16dp"
         android:layout_gravity="center"
-        android:layout_marginTop="30dp"
-        android:orientation="horizontal">
-    <EditText
-        android:id="@+id/itemCategory"
-        android:layout_width="230dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="70dp"
-        android:layout_gravity="center"
-        android:ems="10"
-        android:hint="Select Category"
-        android:inputType="textPersonName" />
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/dropdown_arrow"/>
+        android:hint="@string/listing_item_hint"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
 
-    </LinearLayout>
+        <AutoCompleteTextView
+            android:id="@+id/add_listing_category"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:inputType="none"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
 
     <EditText
         android:id="@+id/itemDescription"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="20dp"
         android:layout_width="269dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -101,35 +119,107 @@
             android:layout_gravity="center"
             android:layout_marginLeft="70dp"
             android:ems="10"
-            android:hint="Quantity : "
+            android:textColor="#000"
+            android:text="Quantity : "
             android:inputType="textPersonName"
             android:textSize="17sp" />
 
         <EditText
-            android:layout_width="40dp"
+            android:id="@+id/itemQuantity"
+            android:layout_width="60dp"
             android:layout_height="wrap_content"
+            android:inputType="number"
+            android:text="0"
             android:layout_marginRight="-100dp"/>
 
 
     </LinearLayout>
 
-    <EditText
-        android:id="@+id/itemPrice"
-        android:layout_marginTop="30dp"
-        android:layout_width="269dp"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:ems="10"
-        android:hint="Price"
-        android:inputType="number" />
+        android:layout_marginTop="30dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="89dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="70dp"
+            android:ems="10"
+            android:textColor="#000"
+            android:text="Discount : "
+            android:inputType="textPersonName"
+            android:textSize="17sp" />
+
+        <EditText
+            android:id="@+id/itemDiscount"
+            android:layout_width="60dp"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:text="0"
+            android:layout_marginRight="-100dp"/>
+
+
+        <TextView
+            android:layout_width="20dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="80dp"
+            android:layout_marginRight="-100dp"
+            android:inputType="textPersonName"
+            android:textSize="22sp"
+            android:text="%" />
+        <ProgressBar
+            android:id="@+id/progressBarAddProduct"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:visibility="gone"/>
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="30dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="89dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="70dp"
+            android:ems="10"
+            android:textColor="#000"
+            android:text="Price : "
+            android:inputType="textPersonName"
+            android:textSize="17sp" />
+
+        <EditText
+            android:id="@+id/itemPrice"
+            android:layout_width="60dp"
+            android:layout_height="wrap_content"
+            android:inputType="numberDecimal"
+            android:text="0"
+            android:layout_marginRight="-100dp"/>
+
+
+
+    </LinearLayout>
+
 
     <Button
+        android:id="@+id/itemPublish"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/button_color"
         android:text="Publish"
         android:layout_gravity="center"
-        android:layout_marginLeft="90dp"
+        android:layout_marginLeft="100dp"
         android:textColor="@color/black" />
 
         </LinearLayout>
